# 3D-Demo

./: .gitignore  CMakeLists.txt
assets/shaders/: simple.frag  simple.frag.glsl  simple.vert  simple.vert.glsl
include/: Example.hpp.in  Shader.hpp
include/glad/: gl.h
include/shaders/: simple.frag.h  simple.vert.h
src/: main.cpp  shader.cpp
